--- a/styles/summary.css
+++ b/styles/summary.css
@@ -350,7 +350,7 @@ svg.circle:hover {
     transform: scale(0.6);
   }
 }
-@media (min-height: 667px) and (max-height: 823px) {
+@media (max-width: 800px) and (min-height: 667px) and (max-height: 823px) {
   .summary__container {
     margin-top: -100px;
   }
